ready for testing

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -9,7 +9,7 @@
         <ion-slide-box style="height:100%">
 
             <ion-slide>
-                <ion-content scrollbar-y="false">
+                <ion-content scrollbar-y="false" class="text-center">
                     <h3 class="help-page-header">Meet the team</h3>
                     <div class="list card">
                         <div class="item item-image">
