--- a/www/css/style.css
+++ b/www/css/style.css
@@ -47,6 +47,7 @@ h6 {
     margin-right: 5px;
 }
 
+/*Sidemenu header*/
 .profile-preview {
     background-color:#3F3F3F;
     background: url(../img/side07.png);
@@ -150,7 +151,7 @@ h6 {
   /*width: 100%; */
 width:100%;height:100%;position:absolute;top:0;left:0;z-index:-5000;
 
-      background-color: purple;
+      background-color: white;
 }
 .scroll { height: 100% }
 
@@ -356,3 +357,27 @@ width:100%;height:100%;position:absolute;top:0;left:0;z-index:-5000;
   border-radius: 100%;
 }
 
+/*Chart's legend*/
+.tc-chart-js-legend {
+  list-style-type: none;
+  padding-left: 0px;
+  display: table;   /* Allow the centering to work */
+  margin: 0 auto;
+
+}
+.tc-chart-js-legend li {
+  display: block;
+  float: left;
+  /*clear:both;*/
+  padding:10px;
+  display: inline;
+
+}
+.tc-chart-js-legend li span {
+  width:20px;
+  height:20px;
+  display:absolute;
+  float:left;
+  margin-right:10px;
+  border-radius: 50%;
+}
