--- a/www/templates/subject-info.html
+++ b/www/templates/subject-info.html
@@ -42,7 +42,7 @@
                     <span class="badge badge-calm">{{students.length}}</span>
                 </ion-item>
 
-                <ion-item class="item-remove-animate item-avatar" ng-repeat="student in students" type="item-text-wrap">
+                <ion-item class="item-remove-animate item-avatar" ng-repeat="student in students" type="item-text-wrap" ng-click="getAttendanceInfo(student)">
                     <img ng-src="{{student.face}}">
                     <h2>{{student.firstName}} {{student.lastName}}</h2>
                     <div>{{student.course}}</div>
